Tweaks to jvm args for running tooling API tests.