@@ -25,11 +25,16 @@ useTestFixtures()
 
 integTestTasks.all {
     dependsOn({ rootProject.getTasksByName('publishLocalArchives', true) }, ':distributions:binZip')
+}
 
+integTest {
+    jvmArgs "-XX:MaxPermSize=500m"
+}
+
+forkingIntegTest {
     if (isCiServer) {
         maxParallelForks = Math.min(2, rootProject.maxParallelForks)
     }
-    forkEvery = 2
 }
 
 daemonIntegTest {
